Fix crash in CSV importer

Make sure to always use an up-to-date pointer to the profile object and
update the current memo selection whenever the wizard page is entered.

BUG: 422200
FIXED-IN: 5.1.0

(cherry picked from commit 1bcad05dcab4b1389b2ee86a2d81660df20e7cd2)